--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ body {
   color: #2b2b2b;
   line-height: 1.6;
   overflow-x: hidden;
-  padding-top: 70px;
+  padding-top: 130px; /* Increased to account for navbar + banner */
 }
 
 html {
@@ -17,14 +17,20 @@ html {
   overflow-x: hidden;
 }
 
+@media (max-width: 968px) {
+  body {
+    padding-top: 145px; /* Navbar + banner on mobile */
+  }
+}
+
 @media (max-width: 768px) {
   body {
-    padding-top: 65px;
+    padding-top: 135px;
   }
 }
 
 @media (max-width: 480px) {
   body {
-    padding-top: 60px;
+    padding-top: 120px;
   }
 }
