--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ body {
   color: #2b2b2b;
   line-height: 1.6;
   overflow-x: hidden;
-  padding-top: 130px; /* Increased to account for navbar + banner */
+  padding-top: 130px; /* Navbar (70px) + Banner (60px) */
 }
 
 html {
@@ -19,18 +19,18 @@ html {
 
 @media (max-width: 968px) {
   body {
-    padding-top: 145px; /* Navbar + banner on mobile */
+    padding-top: 145px; /* Navbar (65px) + banner (80px) */
   }
 }
 
 @media (max-width: 768px) {
   body {
-    padding-top: 135px;
+    padding-top: 135px; /* Navbar (65px) + banner (70px) */
   }
 }
 
 @media (max-width: 480px) {
   body {
-    padding-top: 120px;
+    padding-top: 120px; /* Navbar (60px) + banner (60px) */
   }
 }
